# cmake-modules

./: CMakeLists.txt  FindCairo.cmake  FindDBus.cmake  FindFFmpeg.cmake  FindFreetype.cmake  FindGpgme.cmake  FindHiSilicon.cmake  FindLibASS.cmake  FindLibuv.cmake  FindSigma.cmake  FindSmCore.cmake  FindSmHw.cmake  FindSmPlay.cmake  LICENSE  README.md
cmake/: ChickenUse.cmake  FindChicken.cmake  FindFFmpeg.cmake  FindLibuv.cmake  FindLua.cmake
cmake/eggs/bind/: CMakeLists.txt
cmake/eggs/bitstring/: CMakeLists.txt
cmake/eggs/blob-utils/: CMakeLists.txt
cmake/eggs/blowfish/: CMakeLists.txt
cmake/eggs/check-errors/: CMakeLists.txt
cmake/eggs/concurrent-native-callbacks/: CMakeLists.txt
cmake/eggs/condition-utils/: CMakeLists.txt
cmake/eggs/coops/: CMakeLists.txt
cmake/eggs/crc32/: CMakeLists.txt
cmake/eggs/dbus/: CMakeLists.txt
cmake/eggs/defstruct/: CMakeLists.txt
cmake/eggs/easyffi/: CMakeLists.txt
cmake/eggs/feature-test/: CMakeLists.txt
cmake/eggs/filepath/: CMakeLists.txt
cmake/eggs/foreigners/: CMakeLists.txt
cmake/eggs/format/: CMakeLists.txt
cmake/eggs/iset/: CMakeLists.txt
cmake/eggs/kvlists/: CMakeLists.txt
cmake/eggs/lookup-table/: CMakeLists.txt
cmake/eggs/lru-cache/: CMakeLists.txt
cmake/eggs/mailbox/: CMakeLists.txt
cmake/eggs/mailbox-threads/: CMakeLists.txt
cmake/eggs/make/: CMakeLists.txt
cmake/eggs/matchable/: CMakeLists.txt
cmake/eggs/md5/: CMakeLists.txt
cmake/eggs/message-digest/: CMakeLists.txt
cmake/eggs/miscmacros/: CMakeLists.txt
cmake/eggs/record-variants/: CMakeLists.txt
cmake/eggs/regex/: CMakeLists.txt
cmake/eggs/scsh-process/: CMakeLists.txt
cmake/eggs/setup-helper/: CMakeLists.txt
cmake/eggs/sha1/: CMakeLists.txt
cmake/eggs/shell/: CMakeLists.txt
cmake/eggs/silex/: CMakeLists.txt
cmake/eggs/socket/: CMakeLists.txt
cmake/eggs/sql-de-lite/: CMakeLists.txt
cmake/eggs/string-utils/: CMakeLists.txt
cmake/eggs/synch/: CMakeLists.txt
cmake/eggs/type-stubs/: CMakeLists.txt
cmake/eggs/typed-records/: CMakeLists.txt
cmake/eggs/utf8/: CMakeLists.txt
cmake/eggs/variable-item/: CMakeLists.txt
tests/: CMakeLists.txt
tests/chicken/: CMakeLists.txt  foreign.c  standalone.c  standalone.scm  with_foreign.scm
tests/chicken/embedded/: CMakeLists.txt  chicken_run.c  program.scm  unit.scm
tests/chicken/modules/: CMakeLists.txt  mmodule.scm  module.scm  usemodule.scm  usestaticmodule.scm
tests/ffmpeg/: CMakeLists.txt  counter.h  read_frame.c
tests/libuv/: CMakeLists.txt  order.c  spawn.c
tests/lua/: .clang_complete  CMakeLists.txt  script1.lua  test1.c
